resources/css/style.css
/*Universal CSS*/

html {
  font-family: 'Quattrocento', serif;
  font-size: 16px;
  margin: 0;
  padding 0;
}

h1 {
  font-family: 'Oswald', sans-serif;
  font-size: 3rem;
  line-height: 1;
  font-weight: 400;
}

h2 {
  font-family: "Oswald", sans-serif;
  font-size: 1.625rem;
  line-height: 1.15384615;
}

h3 {
  font-family: "Oswald", sans-serif;
  font-size: 1.375rem;
  line-height: 1.13636364;
  }

p {
  font-size: 1rem;
  line-height: 1.3;
}

.site-container {
  max-width: 1200px;
  margin: 0 auto;

}

/* Header*/

header {
  height: 64px;
  padding: 1rem 0;
  border-bottom: 1px solid gray;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo_lockup {
  margin-left: 24px;
}

header img {
  display: block;
  float: left;

}

header h2 {
  display: inline;
  margin-left: .25rem;
}

header nav {
  margin-right: 24px;
}

header ul {
  list-style: none;
  font-family: "Oswald", sans-serif;
  font-weight: 300;
  /*  text-transform: uppercase;*/
  letter-spacing: .15px;
}

header li {
  margin-right: 16px;
  display: inline;
}

#signin {
  margin-right: 0;
}

/*Section 1*/

.section1 {
    background-color: lightgray;
    display: flex;
}

.section1 img {
  width: 60%;
  margin: 32px 40px 32px 24px;
  display: inline;
  float: left;
  height: 100%;
}

.section1_content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 32px 40px 32px 0;
}

.section1 h1 {
  margin-bottom: 2rem;
}

.section1 .button {
  padding: 8px 0;
  margin: 3rem 0;
  background-color: gray;
  height: 2rem;
  display: block;
  font-family: "Oswald", sans-serif;
  font-weight: 300;
  color: white;
  font-size: 1.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*Section 2*/

.section2 {
  background-color: darkgray;
  display: flex;
}

.section2_feature {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 60%;
  padding: 32px 42px 32px 24px;
}

.section2 img {
  margin-bottom: 32px;
  display: inline;
  float: left;
  max-width: 100%;
}

.section2 p {
  display: inline;
  float: left;
}

.byline {
  font-size: .75rem;
  /*font-style: italic;*/
  margin-top: 1rem;
  font-weight: bold;
}

.side_story_container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 26.44rem;
  padding: 32px 24px 32px 0;

}

.side_story {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  align-items: center;
  padding: 1rem;
  border-bottom: 1px solid lightgray;
  /*
  margin: 32px 40px 32px 0;
  */
}

.side_story img {
  width: 35%;
  max-height: 100%;
  max-width: 35%;
  display: block;
  margin-right: 16px;
}

.side_story_content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  height: 100%;
}

.side_story h3, p {
  display: block;
  clear: both;
}

/*Media Queries*/

/* Mobile*/
@media screen
  and (device-width: 360px)
  and (device-height: 640px)
  and (-webkit-device-pixel-ratio: 3) {

}

/* Tablet*/
@media only screen
  and (min-device-width: 768px)
  and (max-device-width: 1024px)
  and (-webkit-min-device-pixel-ratio: 1) {

}

